Fix manifest file for Chapter 1

--- a/PlaygroundBook/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
+++ b/PlaygroundBook/PlaygroundBook/PrivateResources/en.lproj/ManifestPlist.strings
@@ -6,10 +6,10 @@ Contains English localizations of values in Manifest.plist files in the playgrou
 */
 
 /* The localized name of the playground book. */
-"PlaygroundBookName" = "Playground Book";
+"PlaygroundBookName" = "Geometry";
 
 /* The localized name of the first chapter in the playground book. */
-"ChapterOneName" = "Chapter One";
+"ChapterOneName" = "Getting Started";
 
 /* The localized name of the first page in the first chapter in the playground book. */
-"ChapterOnePageOneName" = "Playground Page";
+"ChapterOnePageOneName" = "Intro.cutscenepage";
